# duckdb-tools

./: .gitignore  Dockerfile  LICENSE  README.md  append.py  delete.py  delete_insert.py  pyproject.toml  read.py  requirements.txt
.github/workflows/: test.yaml
duckdb_tools/: __main.py
tests/: test_install.py
